src/main/java/org/example/springboot/config/error/exception/NotFoundException.java
package org.example.springboot.config.error.exception;

import org.example.springboot.config.error.ErrorCode;

public class NotFoundException extends BusinessBaseException {
    public NotFoundException(ErrorCode errorCode) {
        super(errorCode);
    }

    public NotFoundException() {
        super(ErrorCode.NOT_FOUND);
    }
}
